WIP: basic front

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 django-rest-framework = "*"
 django-cors-headers = "*"
 "backports.weakref" = "*"
+npm = "*"
 
 [dev-packages]
 flake8 = "*"
